src/objects/TR1__RC_Article__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R&amp;D Partners</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>Hr</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Article</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ar-{0000}</displayFormat>
        <label>Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TR1__Content_can_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( TR1__Content__c )==0</errorConditionFormula>
        <errorMessage>Content can not be blank</errorMessage>
    </validationRules>
</CustomObject>